# mlflow_for_ml_deployment

./: .gitignore  README.md  _pyproject.toml  pyproject.toml
batch_inference/digit_recognition/: base.py  cnn_utils.py  data.py  train.py
batch_inference/iris_classifier/: inference.py  train.py
usecases/diabetes_prediction/: inference.py  online_inference.py  train.py
usecases/diabetes_prediction/core/: base.py  data.py  pipeline.py
usecases/digit_recognition/: data.py  inference.py  online_inference.py  train.py  utils.py
usecases/iris_classifier/: inference.py  online_inference.py  train.py
usecases/walmart_sales_regression/: base.py  data.py  online_inference.py  train.py
utils/: decorators.py  folder.py  mlflow_exp.py
